update title & subtitle

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Textes Étudiés</title>
+    <title>Textes Étudiés - Problématique et Plan</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -34,7 +34,7 @@
 
     <main>
         <section id="excerpt-list-section">
-            <h2>Textes</h2>
+            <h2 style="text-decoration: underline;">Textes Étudiés - Problématique & Plan</h2>
             <ul id="excerpt-list" style="list-style: none;">
                 <!-- Excerpts will be populated here -->
             </ul>
